--- a/package.json
+++ b/package.json
@@ -9,11 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^7.4.7",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.26",
+    "@tanstack/react-query": "^5.90.2",
+    "axios": "^1.12.2",
     "expo": "~54.0.12",
     "expo-status-bar": "~3.0.8",
+    "firebase": "^12.3.0",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-paper": "^5.14.5",
     "react-native-reanimated": "^4.1.2",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
