--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^23.4.0",
+    "@react-native-firebase/messaging": "^23.4.0",
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "@tanstack/react-query": "^5.90.2",
     "axios": "^1.12.2",
     "expo": "~54.0.12",
+    "expo-device": "^8.0.9",
+    "expo-notifications": "^0.32.12",
+    "expo-permissions": "^14.4.0",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.3.0",
     "react": "19.1.0",
